MMRDS-647 Fixed Scrollbars on grids. Updated metadata.json with edits and removed grid attributes. Fixed Password Type on user_render.

--- a/source-code/scratch/owin/owin/psk/app/css/style.css
+++ b/source-code/scratch/owin/owin/psk/app/css/style.css
@@ -12,7 +12,7 @@ body {
     font-size: 16px;
     font-weight: 300;
     letter-spacing: 0.5px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 body1 {
